# Imperium

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  TODO.md  index.html  opponent_6.json  opponent_7.json  opponent_9.json  program_id_devnet.json
.github/workflows/: ci.yml  release.yaml
assets/ui/chirps/: hangar_menu.chirp  hangar_popup.chirp  hanger_menu.chirp  loading_menu.chirp  login_init.chirp  login_window.chirp  replay_ui.chirp  station_ui.chirp  test_menu.chirp
hologram-cli/: .env.example  Cargo.toml
hologram-cli/src/: error.rs  main.rs
programs/hologram/: Cargo.toml  README.MD
programs/hologram/src/: error.rs  lib.rs
programs/hologram/src/engine/: README.md  active.rs  active_powerup.rs  battlecard.rs  concrete_powerup.rs  effect.rs  fight_engine.rs  loot_engine.rs  mod.rs  passive_powerup.rs  passives.rs  powerup.rs
programs/hologram/src/instructions/: arena_matchmaking.rs  arena_matchmaking_settle.rs  claim_fuel_allowance.rs  create_spaceship.rs  create_spaceship_settle.rs  create_user_account.rs  initialize_realm.rs  mod.rs  pick_crate_settle.rs
programs/hologram/src/instructions/user_facing/: allocate_stat_point.rs  arena_matchmaking.rs  claim_fuel_allowance.rs  create_spaceship.rs  create_user_account.rs  mod.rs  pick_crate.rs  upgrade_subsystem.rs
programs/hologram/src/state/: mod.rs  realm.rs  spaceship.rs  user_account.rs
programs/hologram/src/state/sub_types/: experience.rs  fuel.rs  mod.rs  switchboard.rs  wallet.rs
programs/hologram/src/utils/: limited_string.rs  mod.rs  random_number_generator.rs
src/: asset_loading.rs  dev_ui.rs  game_ui.rs  input_util.rs  lib.rs  login.rs  main.rs  menu.rs  player.rs  solana.rs  solana_client.rs
src/game_ui/: dsl.rs  egui_wrappers.rs  highlight.rs  mirror.rs  mod.rs  switch.rs
src/scenes/: hangar.rs  hanger.rs  mod.rs  replay.rs  station.rs
test_keys/: opponent_1.json  opponent_10.json  opponent_11.json  opponent_2.json  opponent_3.json  opponent_4.json  opponent_5.json  opponent_8.json
tests/: main.rs
tests/instructions/: allocate_stat_point.rs  arena_matchmaking.rs  claim_fuel_allowance.rs  create_spaceship.rs  create_user_account.rs  initialize_realm.rs  mod.rs  pick_crate.rs  upgrade_subsystem.rs
tests/utils/: mod.rs  pda.rs  utils.rs
