[package]
name = "imperium"
version = "0.1.0"
publish = false
authors = ["Acammm <alexcamill@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["programs/*"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2",
] }
bevy_kira_audio = { version = "0.17.0" }
bevy_asset_loader = { version = "0.17" }
bevy-inspector-egui = { version = "0.19.0" }
# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
#
hologram = { workspace = true }
# Solana related
anchor-client = { workspace = true }
solana-program = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
solana-cli-output = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
switchboard-solana = { workspace = true }
# Conf
dotenv = "0.15.0"
shellexpand = "3.1.0"
futures-lite = "1.13.0"

[build-dependencies]
embed-resource = "1.4"

[dev-dependencies]
tokio = { workspace = true }
# bonfida-test-utils = "0.2.1"anchor-lang = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
bincode = "1.3.3"
maplit = "1.0.2"

[workspace.dependencies]
# Anchor
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-client = "0.28.0"
# Solana
solana-program = "1.16.13"
solana-program-test = "1.16.13"
solana-sdk = "1.16.13"
solana-account-decoder = "1.16.13"
solana-transaction-status = "1.16.13"
solana-client = "1.16.13"
solana-cli-output = "1.16.13"
solana-security-txt = "1.1.1"
spl-token = "4.0"
spl-associated-token-account = "2.2.0"
# Solana related Crates
switchboard-solana = "0.28.28"
#
borsh = "0.10.3"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
hologram = { path = "programs/hologram", features = ["no-entrypoint"] }
tokio = { version = "1.0.0", features = ["macros"] }
#
proptest = "1.2.0"


# solana-client-wasm = { version = "1.16.5" }
# solana-extra-wasm = { version = "1.16.5" }
