[package]
name = "imperium"
version = "0.1.0"
publish = false
authors = ["Acammm <alexcamill@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["programs/*"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
[dependencies]
# Game engine
comfy = "0.1.2"
# Use bevy tasks for async ops
bevy_tasks = "0.11.2"

hologram = { path = "programs/hologram", features = ["no-entrypoint"] }

# Conf
dotenv = "0.15"
shellexpand = "3.1.0"

futures-lite = "1.13.0"

# 
# Solana related
anchor-client = "0.28"
# anchor-spl = "0.28"
solana-program = "1.16"
solana-sdk = "1.16"
solana-account-decoder = "1.16"
solana-transaction-status = "1.16"
solana-client = "1.16"
solana-cli-output = "1.16"
spl-token = "4.0"
spl-associated-token-account = "2.0"
borsh = "0.10"
fehler = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
switchboard-solana = "0.28.21"

# solana-client-wasm = { version = "1.16.5" }
# solana-extra-wasm = { version = "1.16.5" }


# keep the following in sync with Bevy's dependencies
# No longer using bevy
# winit = { version = "0.28", default-features = false }
# image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
