[package]
name = "imperium"
version = "0.1.0"
publish = false
authors = ["Acammm <alexcamill@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["programs/hologram"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
[dependencies]
# Game engine
comfy = "0.1.2"
# Use bevy tasks for async ops
bevy_tasks = "0.11.2"
hologram = { workspace = true }
# Solana related
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
solana-cli-output = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
switchboard-solana = { workspace = true }
# Conf
dotenv = "0.15.0"
shellexpand = "3.1.0"
futures-lite = "1.13.0"
#
tokio = { workspace = true }

[build-dependencies]
embed-resource = "1.4"

[dev-dependencies]
hologram = { workspace = true, features = [
    "testing",
] } # https://github.com/rust-lang/rust/issues/59168#issuecomment-962214945
tokio = { workspace = true }
solana-program-test = { workspace = true }
bincode = "1.3.3"
maplit = "1.0.2"
rand = "0.8.5"
bytemuck = "1.14.0"

#

[workspace.dependencies]
# Anchor
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
anchor-client = "0.28.0"
# Solana
solana-program = "1.16"
solana-sdk = "1.16"
solana-account-decoder = "1.16"
solana-transaction-status = "1.16"
solana-client = "1.16"
solana-cli-output = "1.16"
solana-security-txt = "1.1.1"
spl-token = "4.0"
spl-associated-token-account = "2.2.0"
solana-program-test = "1.16"
# Solana related Crates
switchboard-solana = { version = "0.28.29", features = ["no-entrypoint"] }
#
tokio = { version = "1.0.0", features = ["macros"] }
borsh = "0.10.3"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
hologram = { path = "programs/hologram", features = ["no-entrypoint"] }
#


# solana-client-wasm = { version = "1.16.5" }
# solana-extra-wasm = { version = "1.16.5" }
