[package]
name = "hologram-cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["devnet"]
mainnet = []
devnet = []

[dependencies]
anchor-lang = { workspace = true }
anchor-client = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-rpc = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token = { workspace = true }
switchboard-solana = { workspace = true }

hologram = { workspace = true }

dotenv = "0.15.0"
clap = { version = "4.4.4", default-features = false, features = [
    "std",
    "derive",
    "env",
] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
