[package]
name = "hologram"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hologram"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = [
    "devnet",
] # `anchor build -- --no-default-features --features mainnet-beta` to override
mainnet-beta = []
devnet = []
localnet = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
switchboard-solana = { workspace = true }
num-traits = "0.2.16"
num = "0.4.1"

[dev-dependencies]
proptest = "1.2.0"
