[package]
name = "hologram"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hologram"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = [
    "devnet",
] # `anchor build -- --no-default-features --features mainnet-beta` to override
mainnet-beta = []
devnet = []
localnet = []
testing = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
spl-token = "4.0"
solana-program = "1.16"
solana-security-txt = "1.1.1"
num-traits = "0.2.16"
num = "0.4.1"
switchboard-solana = "0.28.28"
lazy_static = "1.4.0"

[dev-dependencies]
proptest = "1.2.0"
