[package]
name = "hologram"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hologram"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = [
    "devnet",
] # `anchor build -- --no-default-features --features mainnet-beta` to override
mainnet-beta = []
devnet = []
localnet = []
testing = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = "4.0"
solana-program = "1.16"
solana-security-txt = "1.1.1"
num-traits = "0.2.16"
num = "0.4.1"
switchboard-solana = "0.28.33"
lazy_static = "1.4.0"
# anchor-lang = { workspace = true }
# anchor-spl = { workspace = true }
# spl-token = { workspace = true }
# solana-program = { workspace = true }
# solana-security-txt = { workspace = true }
# num-traits = "0.2.16"
# num = "0.4.1"
# switchboard-solana = { workspace = true }

[dev-dependencies]
proptest = "1.2.0"
